--- a/Oblig1Innovation-camp/index.html
+++ b/Oblig1Innovation-camp/index.html
@@ -14,7 +14,7 @@
 
     <div class="nav" id="nav">
             <div class="nav-logo">
-                <span class="logo-name">Cautions</span>
+                <span class="logo-name">Caution</span>
             </div>
 
             <div class="phone-icon">
