--- a/Oblig1Innovation-camp/index.html
+++ b/Oblig1Innovation-camp/index.html
@@ -14,7 +14,7 @@
 
     <div class="nav" id="nav">
             <div class="nav-logo">
-                <span class="logo-name">Cautions</span>
+                <span class="logo-name">Caution</span>
             </div>
 
             <div class="phone-icon">
@@ -25,7 +25,7 @@
 
         <div class="nav-menu" id="nav-menu">
                 <ul id="menu">
-                    <li><a href="#">Home </a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="#">Challenges</a></li>
                     <li><a href="#">Solution</a></li>
                 </ul>
