--- a/Oblig1Innovation-camp/index.html
+++ b/Oblig1Innovation-camp/index.html
@@ -73,7 +73,7 @@
             <p>Sources</p>
         </div>
         <div>
-            <p>Sources</p>
+            <a href="https://moha0102.github.io/innovation_camp/Oblig1Innovation-camp/">Website</a>
         </div>
         <div>
             <p>Sources</p>
