--- a/Oblig1Innovation-camp/index.html
+++ b/Oblig1Innovation-camp/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" type="text/css" href="assets/style/main.css">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Arvo" />
     <script src="https://kit.fontawesome.com/145b31a52b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="assets/style/device.css">
+    <link rel="stylesheet" type="text/css" href="assets/style/w250.css">
+    <link rel="stylesheet" type="text/css" href="assets/style/w350.css">
+    <link rel="stylesheet" type="text/css" href="assets/style/w400.css">
+    <link rel="stylesheet" type="text/css" href="assets/style/w630.css">
     <title>Document</title>
 </head>
 <body>
@@ -14,7 +17,7 @@
 
     <div class="nav" id="nav">
             <div class="nav-logo">
-                <span class="logo-name"><img src="assets/img/logo.png"></span>
+                <img class="logo-name" src="assets/img/logo.png">
             </div>
 
             <div class="phone-icon">
