--- a/Oblig1Innovation-camp/index.html
+++ b/Oblig1Innovation-camp/index.html
@@ -17,7 +17,7 @@
 
     <div class="nav" id="nav">
             <div class="nav-logo">
-                <img class="logo-name" src="assets/img/logo.png">
+                <img alt="Corporation logo" class="logo-name" src="assets/img/logo.png">
             </div>
 
             <div class="phone-icon">
@@ -57,7 +57,7 @@
     </section>
 
     <section class="body-image">
-        <img src="assets/img/ethiopakids.jpg" width="100%">
+        <img alt="Ethiopian children" src="assets/img/ethiopakids.jpg" width="100%">
     </section>
 
     <section class="body-solution">
