--- a/Oblig1Innovation-camp/challenges.html
+++ b/Oblig1Innovation-camp/challenges.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="assets/style/w350.css">
     <link rel="stylesheet" type="text/css" href="assets/style/w400.css">
     <link rel="stylesheet" type="text/css" href="assets/style/w760.css">
-    <title>Document</title>
+    <title>Challenges</title>
 </head>
 <body>
 
@@ -21,47 +21,33 @@
 
         <div class="nav-menu" id="nav-menu">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="challenges.html">Challenges</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Challenges</a></li>
                     <li><a href="#">Solution</a></li>
                 </ul>
         </div>
     </div>
 
-
-    <section class="main-body">
-        <div class="thesis">
-            <span><span class="red">What if </span> schools could track the <span class="red">childrens</span> attendance rate?</span>
+    <section class="facing-challenge">
+        <div>
+            <img alt="textbooks, pens, and papers" src="assets/img/textbook.png">
         </div>
-        <div class="scroll-button">
-            <a class="scroll-down" href="#jump-to-challenge">Scroll Down</a>
-        </div>
-    </section>
-
-    <section class="body-challenge" id="jump-to-challenge">
-        <div class="info-challenge">
+        <div>
             <h1 style="color:red">Challenge</h1>
-            <p>The lack of study material such as textbooks, pens and paper is 
+            <p>
+                The lack of study material such as textbooks, pens and paper is 
                 one of the many challenges standing in the way of a good educational system in Ethiopia.
-                Low income combined with the limited assets, discourages parents to send their children to school because its expensive...
+                Low income combined with the limited assets, discourages parents to send their children to school because its expensive.
+                The consequences of parents being discouraged to send their children to school are extremely damaging to their development for generations to come.
             </p>
-            <a href="#">Continue reading...</a>
+            <p><strong>Risks:</strong></p>
+            <ul>
+                <li>Breach of privacy</li>
+                <li>Low participation rates</li>
+                <li>Economy</li>
+            </ul>
         </div>
-    </section>
 
-    <section class="body-image">
-        <img alt="Ethiopian children" src="assets/img/ethiopakids.jpg" width="100%">
-    </section>
-
-    <section class="body-solution">
-        <div class="info-challenge">
-            <h1 style="color:red">Solution</h1>
-            <p>We have chosen to implement an innovative product for students and teachers in Ethiopia.
-            This product will be based on schools that have access to the internet.
-            The teacher will be assigned a student, where the teacher...
-            </p>
-            <a href="#">Continue reading...</a>
-        </div>
     </section>
 
     <footer class="footer">
