Responsive | Fixes | Added new page

--- a/Oblig1Innovation-camp/challenges.html
+++ b/Oblig1Innovation-camp/challenges.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Challenges</a></li>
-                    <li><a href="#">Solution</a></li>
+                    <li><a href="solution.html">Solution</a></li>
                 </ul>
         </div>
     </div>
@@ -51,7 +51,22 @@
     </section>
 
     <footer class="footer">
+        <div class="foot-menu">
+                Navigation:
+                <a href="#">Home</a>
+                <a href="challenges.html">Challenges</a>
+                <a href="solution.html">Solution</a>
+        </div>
 
+        <div class="info">
+            <p>Email: <strong><a href="mailto:s354364@oslomet.no">s354364@oslomet.no</a></strong></p>
+            <p>Phone: <strong>454 18 389</strong></p>
+        </div>
+
+        
+        <div class="copyright">
+            <p>Copyright © 2020 Mohammad Abo Khalifa & Sajaval Ahmad All Rights Reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
