Added menu link

--- a/Oblig1Innovation-camp/challenges.html
+++ b/Oblig1Innovation-camp/challenges.html
@@ -53,8 +53,8 @@
     <footer class="footer">
         <div class="foot-menu">
                 Navigation:
-                <a href="#">Home</a>
-                <a href="challenges.html">Challenges</a>
+                <a href="index.html">Home</a>
+                <a href="#">Challenges</a>
                 <a href="solution.html">Solution</a>
         </div>
 
