--- a/Oblig1Innovation-camp/solution.html
+++ b/Oblig1Innovation-camp/solution.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="assets/style/w400.css">
     <link rel="stylesheet" type="text/css" href="assets/style/w760.css">
     <link rel="stylesheet" type="text/css" href="assets/style/w1275.css">
-    <title>Challenges</title>
+    <title>Solution</title>
 </head>
 <body>
 
