Link "Continue reading"

--- a/Oblig1Innovation-camp/index.html
+++ b/Oblig1Innovation-camp/index.html
@@ -45,7 +45,7 @@
                 one of the many challenges standing in the way of a good educational system in Ethiopia.
                 Low income combined with the limited assets, discourages parents to send their children to school because its expensive...
             </p>
-            <a href="#">Continue reading...</a>
+            <a href="challenges.html">Continue reading...</a>
         </div>
     </section>
 
@@ -60,7 +60,7 @@
             This product will be based on schools that have access to the internet.
             The teacher will be assigned a student, where the teacher...
             </p>
-            <a href="#">Continue reading...</a>
+            <a href="solution.html">Continue reading...</a>
         </div>
     </section>
 
