--- a/Oblig1Innovation-camp/index.html
+++ b/Oblig1Innovation-camp/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="assets/style/w350.css">
     <link rel="stylesheet" type="text/css" href="assets/style/w400.css">
     <link rel="stylesheet" type="text/css" href="assets/style/w760.css">
-    <title>Home</title>
+    <title>Attendence rates  - Home</title>
 </head>
 <body>
 
